# potara-icp

./: .gitignore  CRITICAL_ANALYSIS_REAL_INTEGRATION.md  FINAL_ACHIEVEMENT_SUMMARY.md  README.md  TASK4_TECHNICAL_ISSUES_REPORT.md  complete_cross_chain_demo.js  debug_blob_format.js  debug_secret_revelation.js  demo_complete_atomic_swap.js  demo_comprehensive_validation.js  demo_cross_chain_proof.js  demo_icp_integration_simplified.js  demo_icp_to_evm_atomic_swap.js  demo_simplified.js  demo_simplified_atomic_swap.js  demo_working_atomic_swap.js  deploy_icp_escrow_factory.js  deploy_limitorderprotocol.js  deploy_real_limitorderprotocol.js  deploy_simple_icp_factory.js  deploy_to_base_sepolia.js  final_validation_report.js  hardhat.config.js  limitorderprotocol-deployment.json  package-lock.json  package.json  real_1inch_fusion_integration.js  real_1inch_integration_demo.js  test_contract_connection.js  test_cross_chain_atomic_swap.js  test_cross_chain_monitoring.js  test_fixed_blob.js  test_icp_simple.js  test_lop_access.js  test_lop_integration.js  test_on_base_sepolia.js  test_real_cross_chain_communication.js  test_simple_icp_factory.js  test_token_support.js  verify_cross_chain_compatibility.js  (+2 more)
cross-chain-sdk/: package-lock.json  tsconfig.build.json
icp_escrow/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
icp_escrow/src/icp_escrow_backend/: Cargo.toml
icp_escrow/src/icp_escrow_backend/src/: lib.rs
tests/: config.ts  escrow-factory.ts  icp-integration.spec.ts  icp-resolver.ts  real-1inch-icp-integration-demo.spec.ts  resolver.ts  wallet.ts  (+4 more)
(+34 files in other folders)
